fix: use golangci action for linting

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Go
-        uses: actions/setup-go@v5
-
       - name: Run Linter
-        run: make lint
+        uses: golangci/golangci-lint-action@v8
+        with:
+          install-mode: goinstall
 
   build:
     runs-on: ubuntu-latest
