--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,15 @@ jobs:
 
       - name: Build application
         run: make build
+
+  server:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+
+      - name: Test server run
+        run: make test-server
