--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -4,10 +4,13 @@ on:
   push:
     branches:
       - main
+      - development
 
 jobs:
   push:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
