--- a/.github/workflows/image-push.yml
+++ b/.github/workflows/image-push.yml
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Set up `kubectl`
         uses: azure/setup-kubectl@v3
