--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
 
+      - name: Setup Dependencies
+        run: |
+          sudo apt-get install protobuf
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+
       - name: Build application
         run: make build
 
